# isenmulang

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/fetchai/: agent.py  private_keys.json
src/isen_mulang_rust_backend/: Cargo.toml  isen_mulang_rust_backend.did
src/isen_mulang_rust_backend/src/: lib.rs
src/isen_mulang_rust_frontend/: index.html  package.json  vite.config.js
src/isen_mulang_rust_frontend/src/: App.jsx  main.jsx
