[package]
name = "isen_mulang_rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
ic-cdk-timers = "0.12" # Feel free to remove this dependency if you don't need timers
serde = { version = "1.0", features = ["derive"] }
ic-stable-structures = "0.5.5" # Use a compatible version
ic-cdk-macros = "0.18"